[package]
name = "openvex"
version = "0.1.1"
edition = "2021"
description = "Rust types for the OpenVEX format"
license = "Apache-2.0"
repository = "https://github.com/seedwing-io/openvex-rs"
categories = ["parser-implementations"]

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
chrono = { version = "0.4.23", features = ["serde"] }

[dev-dependencies]
serde_json = "1"
